fix for about page hamburger z-index and icon sizing

--- a/src/css/components/header.styl
+++ b/src/css/components/header.styl
@@ -9,7 +9,9 @@ header
   left 0
   text-align center
   width 100%
+  padding 10px 0
   transition left 350ms ease-out
+  z-index 1000
 
   .call-to-action.button
     line-height 21px
@@ -21,7 +23,7 @@ header
       text-decoration none
 
     .icon
-      font-size 60px
+      font-size 40px
       color rgb(241, 234, 208)
       max-width none
 
